<resources>
    <string name="app_name">Walkaholic</string>
    <string name="kakao_app_key">0ee09f5022e88e6ca843a2bcf5949741</string>
    <string name="naver_client_id">639sa4y6yj</string>
    <!-- 튜토리얼 -->
    <string name="skip">건너뛰기</string>
    <!-- 로그인 및 회원가입 -->
    <string name="tutorial"><u>튜토리얼</u></string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="birth">생년월일</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="height">키(cm)</string>
    <string name="weight">몸무게(kg)</string>
    <string name="kakao">카카오톡</string>
    <string name="google">구글</string>
    <string name="facebook">페이스북</string>
    <string name="next">다음</string>
    <string name="login">로그인</string>
    <string name="register">가입하기</string>
    <string name="login_kakao">카카오톡으로 로그인</string>
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="error">오류</string>
    <string name="agree_all">전체 동의</string>
    <string name="agree_service">서비스이용 동의</string>
    <string name="agree_privacy">개인정보수집이용 동의</string>
    <!-- 캐릭터 -->
    <string name="character_type0">파뿌리</string>
    <string name="character_type1">파뿌리</string>
    <string name="character_type2">파뿌리</string>
    <!-- 서비스 -->
    <string name="dash_walk_distance"><b>8,000 걸음</b> 걸었어요!</string>
    <string name="dash_km_distance">이동 거리</string>
    <string name="dash_calendar_distance">거리(km)</string>
    <string name="dash_calendar_step_count">걸음수</string>
    <string name="dash_calendar_kcal">칼로리</string>
    <string name="dash_calendar_prev">Previous</string>
    <string name="dash_calendar_next">Next</string>
    <string name="dash_diet_weight">소모 칼로리</string>
    <string name="dash_walk_record">산책 기록</string>
    <string name="dash_walk_play">걷기시작</string>
    <string name="dash_show_detail">자세히 보기</string>
    <!-- 안내 메시지 -->
    <string name="msg_register_agree">서비스이용 및 개인정보수집이용에 동의하셨습니다</string>
    <string name="msg_success_auth">카카오톡 인증 정보 수신에 성공하였습니다</string>
    <!-- 오류 메시지 -->
    <string name="err_input">입력해주세요</string>
    <string name="err_complete">완료해주세요</string>
    <string name="err_deny_prev">뒤로 갈 수 없습니다</string>
    <string name="err_multiple_touch">좀 더 천천히 터치해주세요</string>
    <string name="err_auth">카카오톡 인증 정보 수신에 실패하였습니다</string>
    <string name="err_user">사용자 정보를 확인할 수 없습니다</string>
    <string name="err_unexpected">예기치 않은 오류가 발생하였습니다</string>
    <!-- 하단 내비게이션 바 -->
    <string name="main">메인</string>
    <string name="path">산책하기</string>
    <string name="theme">테마산책</string>
    <string name="challenge">챌린지</string>
    <!-- 햄버거 메뉴 -->
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="character_setting">캐릭터 설정</string>
    <string name="character_shop">아이템 상점</string>
    <string name="favorite_path">찜한 경로</string>
    <string name="hamburger_tutorial">튜토리얼</string>
    <string name="logout">로그아웃</string>
    <string name="hbg_header_intro">%s님!</string>
    <!-- SNS 공유 -->
    <string name="share">공유하기</string>
    <!-- 산책 기록 -->
    <string name="total_walk">총 산책기록</string>
    <string name="detail_walk">세부 산책기록</string>
    <!-- 기타 -->


</resources>