<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionHbgProfile"
        android:title="@string/profile_setting" />
    <item
        android:id="@+id/actionHbgDashCharacterProfile"
        android:title="@string/character_setting" />
    <item
        android:id="@+id/actionHbgDashCharacterShop"
        android:title="@string/character_shop" />
    <item
        android:id="@+id/actionHbgWalkRecord"
        android:title="@string/dash_walk_record" />
    <item
        android:id="@+id/actionHbgFavorite"
        android:title="@string/favorite_path" />
    <item
        android:id="@+id/actionHbgTutorial"
        android:title="@string/hamburger_tutorial" />
    <item
        android:id="@+id/actionHbgLogout"
        android:title="@string/logout" />
</menu>