<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_regLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <ImageView
        android:id="@+id/RegisterImgLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_title"
        app:layout_constraintBottom_toTopOf="@+id/registerLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/registerBtnNext"
        app:layout_constraintTop_toBottomOf="@id/RegisterImgLogo">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEtNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerBtnNext"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_default"
        android:foreground="?selectableItemBackground"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/registerBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_default"
        android:foreground="?selectableItemBackground"
        android:text="@string/register"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>