<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mapo.walkaholic.ui.main.dashboard.calendar.DashboardCalendarViewModel" />

        <variable
            name="user"
            type="com.mapo.walkaholic.data.model.User" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F7F7"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:elevation="2dp"
                android:background="@drawable/box_dashboard_corner_white">

                <TextView
                    style="@style/font_semi_bold_24_one"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="58dp"
                    android:textColor="#57534A"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:mcv_showOtherDates="defaults"
                    app:mcv_rightArrowMask="@drawable/ic_btn_calendar_arrow_right"
                    app:mcv_leftArrowMask="@drawable/ic_btn_calendar_arrow_left"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/font_semi_bold_12_one"
                        android:id="@+id/dashCalendarTvIntroDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_walk"
                        android:textColor="@color/h3"
                        android:layout_marginTop="31dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:elevation="3dp">

                    <LinearLayout
                        style="@style/font_semi_bold_12_one"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:background="@drawable/box_dashboard_uppercorner_f9a25b"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/dashCalendarTvTotalDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="2020.11.17 월요일,"
                            android:textColor="#443F35"
                            android:layout_marginLeft="16dp" />

                        <TextView
                            android:id="@+id/dashCalendarTvTotalTime"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="총 3시간 20분"
                            android:textColor="#443F35"
                            android:layout_marginLeft="3dp"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/share"
                            android:textColor="@color/colorWhite"
                            android:layout_marginRight="16dp" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal"
                        android:background="@drawable/box_dashboard_lowercorner_white"
                        android:layout_gravity="center_vertical">

                        <LinearLayout
                            android:id="@+id/dashCalendarRLDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="32dp"
                            android:layout_marginTop="4dp">

                            <TextView
                                style="@style/font_black_28_one"
                                android:id="@+id/dashCalendarTvTotalDistance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />

                            <TextView
                                style="@style/font_semi_bold_10_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/dash_calendar_distance"
                                android:textColor="@color/h4"
                                android:layout_marginTop="4dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dashCalendarRLCalorie"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:layout_constraintLeft_toRightOf="@id/dashCalendarRLDistance"
                            app:layout_constraintRight_toLeftOf="@id/dashCalendarRLWalkAmount"
                            android:orientation="vertical"
                            android:layout_marginTop="4dp">

                            <TextView
                                style="@style/font_black_28_one"
                                android:id="@+id/dashCalendarTvCalorie"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />

                            <TextView
                                style="@style/font_semi_bold_10_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/dash_calendar_kcal"
                                android:textColor="@color/h4"
                                android:layout_marginTop="4dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dashCalendarRLWalkAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:orientation="vertical"
                            android:layout_marginRight="32dp"
                            android:layout_marginTop="4dp">

                            <TextView
                                style="@style/font_black_28_one"
                                android:id="@+id/dashCalendarTvWalkAmount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/color689f38" />

                            <TextView
                                style="@style/font_semi_bold_10_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/dash_calendar_step_count"
                                android:textColor="@color/colorf37520"
                                android:layout_marginTop="4dp"/>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/font_semi_bold_12_one"
                        android:id="@+id/dashCalendarTvDetailRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_walk"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/h3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/dashCalendarRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        tools:listitem="@layout/item_dashboard_calendar"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>